# urlx

./: -  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
Formula/: urlx.rb
crates/liburlx/: Cargo.toml
crates/liburlx-ffi/: Cargo.toml  build.rs  cbindgen.toml  liburlx.pc.in
crates/liburlx-ffi/include/: urlx.h
crates/liburlx-ffi/src/: lib.rs
crates/liburlx/benches/: throughput.rs
crates/liburlx/fuzz/: Cargo.toml
crates/liburlx/fuzz/fuzz_targets/: cookie_parser.rs  hsts_parser.rs  http_parser.rs  url_parser.rs
crates/liburlx/src/: cookie.rs  dns.rs  easy.rs  error.rs  glob.rs  hsts.rs  idn.rs  lib.rs  multi.rs  netrc.rs  pool.rs  progress.rs  share.rs  throttle.rs  tls.rs  url.rs
crates/liburlx/src/auth/: aws_sigv4.rs  cram_md5.rs  digest.rs  mod.rs  negotiate.rs  ntlm.rs  scram.rs
crates/liburlx/src/protocol/: dict.rs  file.rs  ftp.rs  gopher.rs  imap.rs  ldap.rs  mod.rs  mqtt.rs  pop3.rs  rtsp.rs  smb.rs  smtp.rs  ssh.rs  telnet.rs  tftp.rs  ws.rs
crates/liburlx/src/protocol/http/: altsvc.rs  decompress.rs  h1.rs  h2.rs  h3.rs  mod.rs  multipart.rs  response.rs
crates/liburlx/src/proxy/: mod.rs  socks.rs
crates/liburlx/tests/: auth_bearer_integration.rs  aws_sigv4_integration.rs  connection_pool.rs  cookie_engine.rs  cookie_jar_api.rs  cookie_persistence.rs  cookie_stress.rs  cookie_wire_flow.rs  curl_compat.rs  decompression.rs  decompression_integration.rs  differential_curl.rs  digest_auth.rs  dns_resolve.rs  e2e_error_recovery.rs  e2e_workflows.rs  easy_api_coverage.rs  easy_config_completeness.rs  easy_edge_cases.rs  easy_method_coverage.rs  error_code_mapping.rs  error_coverage.rs  error_interop.rs  fail_on_error.rs  fail_on_error_integration.rs  ffi_expanded.rs  file_protocol.rs  file_protocol_edge.rs  form_upload_integration.rs  ftp_protocol_edge_cases.rs  h1_parser_edge.rs  h1_parser_edge_cases.rs  header_wire_format.rs  hsts.rs  hsts_integration.rs  hsts_upgrade_integration.rs  http2_integration.rs  http_basic.rs  http_conformance.rs  http_cookies.rs  (+48 more)
crates/liburlx/tests/common/: mod.rs
crates/urlx-cli/: Cargo.toml  build.rs
crates/urlx-cli/src/: args.rs  ipfs.rs  main.rs  output.rs  transfer.rs
scripts/: curlinfo-urlx  curlinfo-wrapper  libtests-shim  patch-sshserver.py  run-curl-tests.sh  urlx-as-curl  urlx-curlinfo
tasks/: 01-ftp-dump-header.md  01-ftp-socks-proxy.md  01-http-auth-digest-ntlm.md  02-ftp-connection-reuse.md  02-http-put-post-expect.md  02-starttls-all-protocols.md  03-ftp-connection-reuse.md  03-http-proxy-connect.md  03-imap-edge-cases.md  04-email-sasl-auth-completion.md  04-ftp-protocol-misc.md  04-http-ntlm-post-callback.md  05-cli-globbing-output.md  05-http-proxy-auth.md  05-sftp-scp.md  06-cookies-hsts-edge-cases.md  06-cookies-hsts.md  06-http-etag-resume.md  07-email-imap-pop3-smtp.md  07-http-redirect-auth-resume.md  07-smtp-mime-email-proxy.md  08-cli-writeout-config-variables.md  08-multipart-formpost.md  08-smtp-auth-cancellation.md  09-ftp-protocol-misc.md  09-http-headers-encoding.md  09-mqtt-protocol.md  10-content-transfer-encoding.md  10-ftp-misc.md  10-long-tail-misc.md  11-http-redirect-url.md  11-misc-remaining.md  12-netrc-parsing.md  12-source-analysis-skips.md  13-cli-warnings-output.md  14-http-put-expect-misc.md  15-build-meta-skip.md
tests/: excluded-tests.txt
tests/ffi/: run_tests.sh  test_basic.c
