[package]
name = "liburlx-ffi"
description = "C ABI compatibility layer for liburlx — drop-in replacement for libcurl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ffi", "libcurl", "curl", "http"]
categories = ["network-programming", "api-bindings"]

[lib]
crate-type = ["cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
liburlx = { path = "../liburlx", version = "0.2.0" }

[build-dependencies]
cbindgen = "0.28"
