[package]
name = "liburlx"
description = "A memory-safe URL transfer library — idiomatic Rust reimplementation of libcurl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["http", "rustls"]

# Protocols
http = []

# TLS backends
rustls = ["dep:rustls", "dep:webpki-roots", "dep:tokio-rustls"]

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt", "time", "sync", "macros"] }
url = "2"
http = "1"
httparse = "1"
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = { version = "1", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring", "tls12"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
