[package]
name = "liburlx"
description = "A memory-safe URL transfer library — idiomatic Rust reimplementation of libcurl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["http", "http2", "rustls", "decompression"]

# Protocols
http = []
http2 = ["dep:h2"]

# TLS backends
rustls = ["dep:rustls", "dep:webpki-roots", "dep:tokio-rustls"]

# Content-Encoding decompression
decompression = ["dep:flate2", "dep:brotli", "dep:zstd"]

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt", "time", "sync", "macros"] }
base64 = "0.22"
h2 = { version = "0.4", optional = true }
url = "2"
http = "1"
httparse = "1"
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = { version = "1", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring", "tls12"] }
flate2 = { version = "1", optional = true }
brotli = { version = "7", optional = true }
zstd = { version = "0.13", optional = true, default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
flate2 = "1"
