[package]
name = "urlx-cli"
description = "urlx — a memory-safe command-line URL transfer tool, drop-in replacement for curl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["cli", "curl", "http", "transfer"]
categories = ["command-line-utilities", "network-programming"]
readme = "../../README.md"

[[bin]]
name = "urlx"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["rustls", "http2", "decompression", "ssh"]
rustls = ["liburlx/rustls"]
http2 = ["liburlx/http2"]
http3 = ["liburlx/http3"]
decompression = ["liburlx/decompression"]
ssh = ["liburlx/ssh"]
tls-srp = ["liburlx/tls-srp"]
hickory-dns = ["liburlx/hickory-dns"]

[dependencies]
filetime = "0.2"
libc = "0.2"
liburlx = { path = "../liburlx", version = "0.2.0", default-features = false, features = ["http"] }
tokio = { version = "1", features = ["rt"] }
